wil-playground/wil-playground-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
        - image: wil42/playground:v2
          name: wil-playground
          ports:
            - containerPort: 8888
