wil-playground/wil-playground-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: wil-playground
