wil-playground/wil-playground-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground
spec:
  ingressClassName: traefik
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil-playground
                port:
                  number: 8888
